--- a/vignettes/gmod_intro_markov_tutorial.Rmd
+++ b/vignettes/gmod_intro_markov_tutorial.Rmd
@@ -177,43 +177,24 @@ The output is the structure of the model including the formulae.
 
 To evaluate the model, we run `gmod_evaluate()` which returns the numerical outcomes. 
 ```{r}
-model_res <- gmod_gen_model_function(model_struc)
+gmod_gen_model_function(model_struc)
 #model_res
 ```
 
 ```{r}
-my_markov_model(model_struc, params)
+model_res <- my_markov_model(model_struc, params, return_trace = T)
 ```
-
-## Simplified example with less equations
-Then, we build the gmod Markov model by using the `gmod_build()` function.
-```{r}
-model_struc2 <- gmod_build(mygmod, params = params, simplify = TRUE)
-model_struc2
-```
-The output is the structure of the model including the formulae.  
-
-To evaluate the model, we run `gmod_evaluate()` which returns the numerical outcomes. 
-```{r}
-model_res2 <- gmod_gen_model_function(model_struc2,  model_function_name = "my_markov_model2")
-#model_res
-```
-
-```{r}
-mode_res2 <- my_markov_model2(model_struc2, params, return_trace = TRUE)
-```
-
 
 The warning just indicates that no parameters were passed, so gmod uses the values in the global environment.  For analyses, such as probabilistic sensitivity analysis (PSA), we can pass the parameters as a list `param`. 
 
 We can load individual outcomes here that we are interested in. For example, if we are interested in the Markov Trace of the Standard of Care treatment, we can type: 
 ```{r}
-model_res2$Trace
+model_res$Trace
 ```
 
 Similarly, we can load the summary outcomes of the costs and utility of the strategies, such that:
 ```{r}
-model_res$Summary
+model_res$summary
 ```
 
 
