some cleanup and updates

--- a/vignettes/dec_tree_Doubilet_1985_example.Rmd
+++ b/vignettes/dec_tree_Doubilet_1985_example.Rmd
@@ -72,45 +72,45 @@ mygmod <- gmod(model_type = "Decision") +
   #final_outcomes("DEAD","SEVSEQHSE","MODSEQHSE","MLDSEQHSE") + 
   event_mapping(event = "Biopsy",  
                 values = c(TRUE, FALSE), 
-                outcomes = c("dieBiop", "HSE"), 
-                probs = c(pBiopsy(decision), Inf))  + 
+                probs = c(pBiopsy(decision), Inf), 
+                outcomes = c("dieBiop", "HSE"))  + 
   event_mapping(event = "dieBiop",  
                 values = c(TRUE, FALSE), 
-                outcomes = c("DEAD", "sevBiopSeq"), 
-                probs = c(pDieBiopsy, Inf))  + 
+                probs = c(pDieBiopsy, Inf), 
+                outcomes = c("DEAD", "sevBiopSeq"))  + 
   event_mapping(event = "sevBiopSeq",  
                 values = c(TRUE, FALSE), 
-                outcomes = c("HSE", "modBiopSeq"), 
-                probs = c(pSevBiopsy, Inf))  + 
+                probs = c(pSevBiopsy, Inf), 
+                outcomes = c("HSE", "modBiopSeq"))  + 
   event_mapping(event = "modBiopSeq",  
                 values = c(TRUE, FALSE), 
-                outcomes = c("HSE", "HSE"), 
-                probs = c(pModBiopsy, Inf))  + 
+                probs = c(pModBiopsy, Inf), 
+                outcomes = c("HSE", "HSE"))  + 
   event_mapping(event = "HSE",  
                 values = c(TRUE, FALSE), 
-                outcomes = c("BiopAvail", "BiopAvail"), 
-                probs = c(pHSE, Inf))  +
+                probs = c(pHSE, Inf), 
+                outcomes = c("BiopAvail", "BiopAvail"))  +
   event_mapping(event = "BiopAvail",  
                 values = c(TRUE, FALSE), 
-                outcomes = c("BiopRes", "die"), 
-                probs = c(pBiopsy(decision), Inf))  + 
+                probs = c(pBiopsy(decision), Inf), 
+                outcomes = c("BiopRes", "die"))  + 
   event_mapping(event = "BiopRes",  
                 #values = c("Positive", "Negative"), 
                 values = c(TRUE, FALSE), 
-                outcomes = c("die", "die"), 
-                probs = c(pBiopRes(HSE), Inf))  + 
+                probs = c(pBiopRes(HSE), Inf), 
+                outcomes = c("die", "die"))  + 
   event_mapping(event = "die",  
                 values = c(T, F), 
-                outcomes = c("DEAD", "sevSeqHSE"), 
-                probs = c(pEvent(HSE, decision, BiopRes, pDieHSE, pDieNoHSE, fDie, addProbDie), Inf)) +
+                probs = c(pEvent(HSE, decision, BiopRes, pDieHSE, pDieNoHSE, fDie, addProbDie), Inf), 
+                outcomes = c("DEAD", "sevSeqHSE")) +
   event_mapping(event = "sevSeqHSE",  
                 values = c(T, F), 
-                outcomes = c("SEVSEQHSE", "modSeqHSE"), 
-                probs = c(pEvent(HSE, decision, BiopRes, pSevHSE, pSevNoHSE, fSev, addProbSev), Inf)) +
+                probs = c(pEvent(HSE, decision, BiopRes, pSevHSE, pSevNoHSE, fSev, addProbSev), Inf), 
+                outcomes = c("SEVSEQHSE", "modSeqHSE")) +
   event_mapping(event = "modSeqHSE",  
                 values = c(T, F), 
-                outcomes = c("MODSEQHSE", "MLDSEQHSE"), 
-                probs = c(pEvent(HSE, decision, BiopRes, pModHSE, pModNoHSE, fMod, addProbMod), Inf)) + 
+                probs = c(pEvent(HSE, decision, BiopRes, pModHSE, pModNoHSE, fMod, addProbMod), Inf), 
+                outcomes = c("MODSEQHSE", "MLDSEQHSE")) + 
   payoffs(util = util(decision, final_outcome, sevBiopSeq, modBiopSeq))
 
 ```
