--- a/vignettes/Markov_age_dep.Rmd
+++ b/vignettes/Markov_age_dep.Rmd
@@ -43,15 +43,15 @@ mygmod <- gmod(model_type = "Markov", n_cycles = 75) +
   initial_probs(states = "H", probs = 1) +
   event_mapping(event = "die",  
               values = c(T, F), 
-              outcomes = c("D", "get_event"), 
-              probs = c(pDie(state, cycle, v_r_mort_by_age), Inf)) +  
+              probs = c(pDie(state, cycle, v_r_mort_by_age), Inf), 
+              outcomes = c("D", "get_event")) +  
   event_mapping(event = "get_event",  
                 values = c("recover", "getsick", "progress", "stay"), 
-                outcomes = c("H", "S1", "S2", curr_state()), 
                 probs = c(pRecover(state), 
                           pGetSick(state), 
                           pProgress(state, decision), 
-                          Inf)) +  
+                          Inf), 
+                outcomes = c("H", "S1", "S2", curr_state())) +  
   payoffs(cost = cost(state, decision, get_event, die), 
           utility = utility(state, decision, get_event))
 ```
@@ -79,7 +79,7 @@ hr_S2  <- 10    # hazard ratio of death in Sicker vs Healthy
 hr_S1S2_trtB <- 0.6  # hazard ratio of becoming Sicker when Sick under treatment B
 
 ## Age-dependent mortality rates ----
-lt_usa_2015 <- read.csv("../data/LifeTable_USA_Mx_2015.csv")
+lt_usa_2015 <- read.csv("../inst/extdata/LifeTable_USA_Mx_2015.csv")
 #* Extract age-specific all-cause mortality for ages in model time horizon
 v_r_mort_by_age <- lt_usa_2015 %>% 
   dplyr::filter(Age >= n_age_init & Age < n_age_max) %>%
