--- a/vignettes/getting_started_markov_gmod.Rmd
+++ b/vignettes/getting_started_markov_gmod.Rmd
@@ -66,14 +66,13 @@ library(magrittr)
 The `gmod()` code looks like this:
 
 ```{r}
-mygmod <- gmod(model_type = "Markov", n_cycles = 5) + 
+mygmod <- gmod() + 
   decisions("StandardOfCare", "StrategyA") + 
-  states("H", "S", "D") + 
-  initial_probs(states = "H", probs = 1) +
-  event_mapping(event = "only_event",  
-              values = c("get_sick", "die", "stay"), 
+  states(names = c("H", "S", "D"), init_probs = c(1,0,0)) + 
+  event(name = "only_event",  
+              results = c("get_sick", "die", "stay"), 
               probs = c(pGetSick(state), pDie(decision, state), Inf), 
-              outcomes = c("S", "D", curr_state())) +  
+              outcomes = c("S", "D", "curr_state")) +  
   payoffs(cost = compute_cost(decision, state))
 ```
 
@@ -87,7 +86,7 @@ Here are the explanation of what each layer does:
   * `event = "only_event"`: defines the event name.  Each event must have a unique name that can be referenced by other evnets.
   * `values = c("get_sick", "die", "stay")`: defines the values of that event: here the event can be getting sick, dying or staying in the current state. 
   * `probs = c(pGetSick(state), pDie(decision, state), Inf))`: these are the probabilities of the event values.  A powerful feature of gmod is that it allows these probabilities to be conditional on other model components.  Here we define the probability of only_event==get_sick by calling pGetSick(state) which is dependent on the state. Similarly, the probability of only_event==die is defined by calling `pDie(decision, state)` which we tell gmod that is dependent on the state and the decision. In the next section, we define `pGetSick` and `pDie` functions. The `Inf` is used to tell gmod to compute the complementary probability (i.e., 1-pGetSick(state)-pDie(state)) to reduce the amount of typing needed. 
-  * `outcomes = c("S", "D", curr_state())`: defines the outcomes of each one of the event values.  getting sick ends up in the S state, dying ends up in the D state, and staying will return to whichever state the cohort was in using the special function `curr_state()`. 
+  * `outcomes = c("S", "D", "curr_state")`: defines the outcomes of each one of the event values.  getting sick ends up in the S state, dying ends up in the D state, and staying will return to whichever state the cohort was in using the special function `"curr_state"`. 
 * `payoffs(cost = cost(decision, state))`: defines the payoffs. Here we only have a cost payoff that is dependent on the state and decision.  More than one payoff can be described here. And, similar to the probs argument these can be a function of other model components, such as decision, state, cycles, events, tunnels, ...etc 
 
 ## User-defined functions for probabilities and payoffs
@@ -132,7 +131,7 @@ Now we have all the ingredients to run the model.
 
 First, we need to generate the model function code 
 ```{r}
-model_struc <- gmod_gen_model_function(mygmod)
+model_struc <- gmod_gen_model_function(mygmod, n_cycles = 5)
 ```
 This will create the `model_struc` which contains the model equations and formulae and can be examined, and as stated in the generated note, this function also produces a function representation of the Markov model.  The default name of this function is `my_markov_model.` 
 
@@ -171,40 +170,39 @@ We start by modifying some of the basic features of our markov model. We will ex
 Changing the number of Markov cycles is straightforward by changing the `n_cycles` parameter in the `gmod` function. For example, below we change the number of cycles from 5 to 2:
 
 ```{r}
-mygmod <- gmod(model_type = "Markov", n_cycles = 2)
+mygmod <- gmod()
 ```
   
 ## changing initial probabilities:
 We can set the initial probabilities in various ways. Most of the time we start the cohort in the same health state. Above we showed how to set it up when everyone starts at the Healthy state.  
 ```{r}
-initial_probs(states = "H", probs = 1)
+states(names = c("H","S","D"), init_probs = c(1,0,0))
 ```
 However, we can do any distribution we want.  For example, we can define the starting probabilities for all the states.
 ```{r}
-initial_probs(states = c("H", "S", "D"), probs = c(0.7,0.2,0.1))
+states(names = c("H","S","D"), init_probs = c(0.7,0.2,0.1))
 ```
 Or, we can even use a combination of variables and Inf as a placeholder for the complementary probabilities.
 ```{r}
 pH0 <- 0.7
 pS0 <- 0.2
-initial_probs(states = c("H", "S", "D"), probs = c(pH0, pS0, Inf))
+states(names = c("H","S","D"), init_probs = c(pH0, pS0, Inf))
 ```
 To run the model with this updated probabilities, we need to add it as a new `init_prob` layer to the `gmod` code. 
 
 
 ```{r}
-mygmod <- gmod(model_type = "Markov", n_cycles = 5) + 
+mygmod <- gmod() + 
   decisions("StandardOfCare", "StrategyA") + 
-  states("H", "S", "D") + 
-  initial_probs(states = c("H", "S", "D"), probs = c(pH0, pS0, Inf)) + 
-  event_mapping(event = "only_event",  
-              values = c("get_sick", "die", "stay"), 
+  states(names = c("H","S","D"), init_probs = c(pH0, pS0, Inf)) + 
+  event(name = "only_event",  
+              results = c("get_sick", "die", "stay"), 
               probs = c(pGetSick(state), pDie(decision, state), Inf), 
-              outcomes = c("S", "D", curr_state())) +  
+              outcomes = c("S", "D", "curr_state")) +  
   payoffs(cost = compute_cost(decision, state))
   
 # creating the updated function and evaluating it
-model_struc <- gmod_gen_model_function(mygmod)
+model_struc <- gmod_gen_model_function(mygmod, n_cycles = 5)
 model_results <- my_markov_model(model_struc, return_trace = T)
 model_results$Trace
 
@@ -217,17 +215,16 @@ gmod tries to check the composition of the probability vector and returns an err
 ## changing the discount rates
 Changing the discount rate is similar to setting the initial probabilities.  These can be set for all the payoffs.  To illustrate, we will add an additional payoff (effectiveness), and use a discount rate of 3% per cycle for both costs and utilities. 
 ```{r}
-mygmod <- gmod(model_type = "Markov", n_cycles = 5) + 
+mygmod <- gmod() + 
   decisions("StandardOfCare", "StrategyA") + 
-  states("H", "S", "D") + 
-  initial_probs(states = "H", probs = 1) + 
-  event_mapping(event = "only_event",  
-              values = c("get_sick", "die", "stay"), 
-              probs = c(pGetSick(state), pDie(decision, state), Inf), 
-              outcomes = c("S", "D", curr_state())) +  
+  states(names = c("H", "S", "D"), init_probs = c(1,0,0)) +
+  event(name = "only_event",  
+        results = c("get_sick", "die", "stay"), 
+        probs = c(pGetSick(state), pDie(decision, state), Inf), 
+        outcomes = c("S", "D", "curr_state")) +  
   payoffs(cost = compute_cost(decision, state), 
-          effectiveness = compute_effectiveness(state)) + 
-  discounts(payoffs = c("cost", "effectiveness"), discounts = c(0.03, 0.03))
+          effectiveness = compute_effectiveness(state), 
+          discount_rates = c(0.03, 0.03))
 
 # define the effectiveness function, the rest of the function will be just like before
 compute_effectiveness <- function(state){
@@ -235,7 +232,7 @@ compute_effectiveness <- function(state){
 }
 
 # creating the updated function and evaluating it
-model_struc <- gmod_gen_model_function(mygmod)
+model_struc <- gmod_gen_model_function(mygmod, n_cycles = 5)
 # we look at the cycle payoffs which apply the discounts to the cycle payoffs.
 my_markov_model(model_struc, return_cycle_payoffs=TRUE)
 ```
@@ -248,14 +245,13 @@ Sometimes we want a probability of transition from one state to another, or a pa
 The code below shows the previous code in a single block where we modify the probability of death and cost payoff to depend on cycle. See if you can spot the difference:
 
 ```{r}
-mygmod <- gmod(model_type = "Markov", n_cycles = 5) + 
+mygmod <- gmod() + 
   decisions("StandardOfCare", "StrategyA") + 
-  states("H", "S", "D") + 
-  initial_probs(states = "H", probs = 1) +
-  event_mapping(event = "only_event",  
-              values = c("get_sick", "die", "stay"), 
+  states(names = c("H", "S", "D"), init_probs = c(1,0,0)) +
+  event(name = "only_event",  
+              results = c("get_sick", "die", "stay"), 
               probs = c(pGetSick(state), pDie(decision, state, cycle), Inf), 
-              outcomes = c("S", "D", curr_state())) +  
+              outcomes = c("S", "D", "curr_state")) +  
   payoffs(cost = compute_cost(decision, state, cycle))
 
 pGetSick <- function(state){
@@ -274,7 +270,7 @@ compute_cost <- function(decision, state, cycle){
   cost_state+cost_decision
 }
 
-model_struc <- gmod_gen_model_function(mygmod)
+model_struc <- gmod_gen_model_function(mygmod, n_cycles = 5)
 ```
 
 Of course, we only need to add the variable cycle to the function definitions `pDie` and `compute_cost` and also remember to add them to the function calls in the `gmod` function.  For illustration we assume that `pDie` and the `cost` of the states both increased as a linear function of the Markov cycles, 1X, 2X, ..., 5X for cycles 1 through 5, respectively.  Let's check first to see that our functions are correct, and then we will run the model and inspect the outputs.
@@ -293,7 +289,7 @@ for (decision in c("StandardOfCare", "StrategyA")){
 
 Now we can examine the impact of this on the model results
 ```{r}
-model_struc <- gmod_gen_model_function(mygmod)
+model_struc <- gmod_gen_model_function(mygmod, n_cycles = 5)
 my_markov_model(model_struc)
 ```
 
@@ -303,15 +299,13 @@ Sometimes we have a different situation where we want to keep track of how long 
 
 Here we show how to do this again for pDie and compute_cost. We are only interested of a history of 3 years. Again - can you spot the difference compared to the minimal model? 
 ```{r}
-mygmod <- gmod(model_type = "Markov", n_cycles = 5) + 
+mygmod <- gmod() + 
   decisions("StandardOfCare", "StrategyA") +
-  states("H", "S", "D") + 
-  tunnels(states = "S", length = 3) +  #
-  initial_probs(states = "H", probs = 1) +
-  event_mapping(event = "only_event",  
-              values = c("get_sick", "die", "stay"), 
+  states(names = c("H", "S", "D"), init_probs = c(1,0,0), max_cycle_in_states = c(1,3,1)) +  #
+  event(name = "only_event",  
+              results = c("get_sick", "die", "stay"), 
               probs = c(pGetSick(state), pDie(decision, state, cycle_in_state), Inf), 
-              outcomes = c("S", "D", curr_state())) + #
+              outcomes = c("S", "D", "curr_state")) + #
   payoffs(cost = compute_cost(decision, state, cycle_in_state)) #
 
 pGetSick <- function(state){
@@ -330,7 +324,7 @@ compute_cost <- function(decision, state, cycle_in_state){ #
   cost_state+cost_decision
 }
 
-model_struc <- gmod_gen_model_function(mygmod)
+model_struc <- gmod_gen_model_function(mygmod, n_cycles = 5)
 ```
 
 It is quite simple to add tunnel dependency by adding the `cycle_in_state` variable. 
@@ -356,7 +350,7 @@ for (decision in c("StandardOfCare", "StrategyA")){
 
 Now we can examine the impact of this on the model results
 ```{r}
-model_struc <- gmod_gen_model_function(mygmod)
+model_struc <- gmod_gen_model_function(mygmod, n_cycles = 5)
 model_results <- my_markov_model(model_struc, return_transition_prob = T, return_state_payoffs = T)
 ```
 
@@ -378,18 +372,17 @@ It is relatively easy to add additional events to a Markov model.  Please keep i
 Below we slightly modify the minimal example by converting the Sick state to an event. Assume that Sick is an acute disease that only takes a few days rather than a full cycle.  We will have a sequence of events `get_sick` followed by `die`. Because Sick is no longer a state, we will use these two health states Alive and Dead and show how the probability of death can be a function of the event get_sick occuring before the event die.  In addition, we will show how the cost can also be a function of the value of the sick_event. We will also look at one strategy "StandardOfCare to simplify the illustration.  
 
 ```{r}
-mygmod <- gmod(model_type = "Markov", n_cycles = 5) + 
+mygmod <- gmod() + 
   decisions("StandardOfCare") + 
-  states("Alive", "Dead") + 
-  initial_probs(states = "Alive", probs = 1) +
-  event_mapping(event = "get_sick",  
-              values = c(TRUE, FALSE), 
+  states(names = c("Alive", "Dead"), init_probs = c(1,0)) + 
+  event(name = "get_sick",  
+              results = c(TRUE, FALSE), 
               probs = c(0.05, Inf), 
               outcomes = c("die", "die")) +  
-  event_mapping(event = "die",  
-              values = c(TRUE, FALSE), 
+  event(name = "die",  
+              results = c(TRUE, FALSE), 
               probs = c(pDie(state), Inf), 
-              outcomes = c("Dead", curr_state())) +  
+              outcomes = c("Dead", "curr_state")) +  
   payoffs(cost = compute_cost(state))
 
 pDie <- function(state){
@@ -404,7 +397,7 @@ compute_cost <- function(state){
   cost_state
 }
 
-model_struc <- gmod_gen_model_function(mygmod)
+model_struc <- gmod_gen_model_function(mygmod, n_cycles = 5)
 my_markov_model(model_struc,return_transition_prob=TRUE,return_state_payoffs=TRUE,return_trace=TRUE,return_cycle_payoffs=TRUE,return_payoff_summary=TRUE)
 
 ```
@@ -420,18 +413,17 @@ The other advantage of being able to refer to any event value is the ability to 
 Below we modify the previous example by making the probability of death a function of the event get_sick occurring upstream.  In addition, we will show how the cost can also be a function of the value of the sick_event. We will also look at one strategy "StandardOfCare to simplify the illustration. 
 
 ```{r}
-mygmod <- gmod(model_type = "Markov", n_cycles = 5) + 
+mygmod <- gmod() + 
   decisions("StandardOfCare") + 
-  states("Alive", "Dead") + 
-  initial_probs(states = "Alive", probs = 1) +
-  event_mapping(event = "get_sick",  
-              values = c(TRUE, FALSE), 
+  states(names = c("Alive", "Dead"), init_probs = c(1,0)) + 
+  event(name = "get_sick",  
+              results = c(TRUE, FALSE), 
               probs = c(0.05, Inf), 
               outcomes = c("die", "die")) +  
-    event_mapping(event = "die",  
-              values = c(TRUE, FALSE), 
+    event(name = "die",  
+              results = c(TRUE, FALSE), 
               probs = c(pDie(state, get_sick), Inf), 
-              outcomes = c("Dead", curr_state())) +  
+              outcomes = c("Dead", "curr_state")) +  
   payoffs(cost = compute_cost(state, get_sick))
 
 pDie <- function(state, get_sick){
@@ -464,7 +456,7 @@ The rest of the user-functions can stay the same.  Below we show how to use prio
 
 Now we can examine the impact of this on the model results
 ```{r}
-model_struc <- gmod_gen_model_function(mygmod)
+model_struc <- gmod_gen_model_function(mygmod, n_cycles = 5)
 my_markov_model(model_struc,return_transition_prob=TRUE,return_state_payoffs=TRUE,return_trace=TRUE,return_cycle_payoffs=TRUE,return_payoff_summary=TRUE)
 
 ```
@@ -479,18 +471,17 @@ params <- list(pDieSick = 0.1,
                costAlive = 1000,
                costGetSick = 2000)
 
-mygmod <- gmod(model_type = "Markov", n_cycles = 5) + 
+mygmod <- gmod() + 
   decisions("StandardOfCare") + 
-  states("Alive", "Dead") + 
-  initial_probs(states = "Alive", probs = 1) +
-  event_mapping(event = "get_sick",  
-              values = c(TRUE, FALSE), 
+  states(names = c("Alive", "Dead"), init_probs = c(1,0)) + 
+  event(name = "get_sick",  
+              results = c(TRUE, FALSE), 
               probs = c(0.05, Inf), 
               outcomes = c("die", "die")) +  
-    event_mapping(event = "die",  
-              values = c(TRUE, FALSE), 
+    event(name = "die",  
+              results = c(TRUE, FALSE), 
               probs = c(pDie(state, get_sick), Inf), 
-              outcomes = c("Dead", curr_state())) +  
+              outcomes = c("Dead", "curr_state")) +  
   payoffs(cost = compute_cost(state, get_sick))
 
 pDie <- function(state, get_sick){
@@ -506,7 +497,7 @@ compute_cost <- function(state, get_sick){
   cost_state+cost_get_sick
 }
 
-model_struc <- gmod_gen_model_function(mygmod)
+model_struc <- gmod_gen_model_function(mygmod, n_cycles = 5)
 my_markov_model(model_struc,params=params)
 
 ```
