--- a/vignettes/gmod_advanced_markov_tutorial.Rmd
+++ b/vignettes/gmod_advanced_markov_tutorial.Rmd
@@ -34,26 +34,53 @@ library(gmod)
 library(magrittr)
 ```
 
+NEW Syntax using layers = twigs
+
 ```{r}
-mygmod <- gmod(model_type = "Markov", n_cycles = 5) + # for illustration it is 75 in the tutorial 
+n_cycles <- 10
+mygmod <- gmod() + # for illustration it is 75 in the tutorial 
   decisions("StandardOfCare", "StrategyA", "StrategyB", "StrategyAB") + 
-  states("H", "S1", "S2", "D") + 
-  tunnels(states = c("S1", "S2"), lengths = c(NA, NA)) + 
-  discounts(payoffs = c("cost", "utility"), discounts = c(0.03, 0.03)) + 
-  initial_probs(states = "H", probs = 1) +
-  event_mapping(event = "die",  
-              values = c(T, F), 
-              probs = c(pDie(state, cycle, cycle_in_state), Inf), 
-              outcomes = c("D", "get_event")) +  
-  event_mapping(event = "get_event",  
-                values = c("recover", "getsick", "progress", "stay"), 
-                probs = c(pRecover(state), 
-                          pGetSick(state), 
-                          pProgress(state, decision, cycle_in_state), 
-                          Inf), 
-                outcomes = c("H", "S1", "S2", curr_state())) +  
+  states(names=c("H", "S1", "S2", "D"), 
+         init_probs=c(1,0,0,0),
+         max_cycle_in_states=c(1,n_cycles,1,1)) + 
+  event(name = "die",  
+        results = c(T, F), 
+        probs = c(pDie(state, cycle, cycle_in_state), Inf), 
+        outcomes = c("D", "get_event")) +  
+  event(name = "get_event",  
+        results = c("recover", "getsick", "progress", "stay"), 
+        probs = c(pRecover(state), 
+                  pGetSick(state), 
+                  pProgress(state, decision, cycle_in_state), 
+                  Inf), 
+        outcomes = c("H", "S1", "S2", "curr_state")) +  
   payoffs(cost = cost(state, decision, get_event, die), 
-          utility = utility(state, decision, get_event))
+          utility = utility(state, decision, get_event),
+          discount_rates=c(0,0))
+
+```
+
+
+```{r}
+# mygmod <- gmod(model_type = "Markov", n_cycles = 5) + # for illustration it is 75 in the tutorial 
+#   decisions("StandardOfCare", "StrategyA", "StrategyB", "StrategyAB") + 
+#   states("H", "S1", "S2", "D") + 
+#   tunnels(states = c("S1", "S2"), lengths = c(NA, NA)) + 
+#   discounts(payoffs = c("cost", "utility"), discounts = c(0.03, 0.03)) + 
+#   initial_probs(states = "H", probs = 1) +
+#   event_mapping(event = "die",  
+#               values = c(T, F), 
+#               probs = c(pDie(state, cycle, cycle_in_state), Inf), 
+#               outcomes = c("D", "get_event")) +  
+#   event_mapping(event = "get_event",  
+#                 values = c("recover", "getsick", "progress", "stay"), 
+#                 probs = c(pRecover(state), 
+#                           pGetSick(state), 
+#                           pProgress(state, decision, cycle_in_state), 
+#                           Inf), 
+#                 outcomes = c("H", "S1", "S2", "curr_state")) +  
+#   payoffs(cost = cost(state, decision, get_event, die), 
+#           utility = utility(state, decision, get_event))
 ```
 
 The `gmod()` function defines the model type as a Markov model and number of cycles as 75. The `decision()` function defines the treatment strategies.  The `initial_probs()` defines the initial probabilities. Here we only define the "Moderate" states as the starting state with probability equals 1. The other states will be set to 0. 
@@ -62,7 +89,7 @@ Since the tutorial assumes that all the events happen simultaneously (i.e., no s
 
 The `cycle_in_S1` is a special keyward that consists of the prefix `cycle_in_` followed by one of the state names.  This keyword tells gmod which state to expand by adding additional tunnel states. You can create other tunnels by adding `cycle_in_[State]`.  Note, adding tunnel states expands the state space and can be computationally expensive. 
 
-The `curr_state()` is a build-in function that instructs gmod to compute the probability of a state returning to itself.
+The `"curr_state"` is a build-in function that instructs gmod to compute the probability of a state returning to itself.
 
 Before we can evaluate the model, first we need to pass the parameter values. Here we use the global environment to define those. Later, we show how to pass these as a parameter list `param` which will be helpful for analyses such as probabilistic sensitivity analyses. 
 
@@ -155,6 +182,7 @@ v_r_mort_by_age0 <- lt_usa_2015 %>%
 
 ```{r}
 params <- list(
+  n_cycles = 10, # number of cycles is required for markov models
 ### Transition rates (annual), and hazard ratios (HRs) ----
 r_HS1  = 0.15,  # constant annual rate of becoming Sick when Healthy
 r_S1H  = 0.5 ,  # constant annual rate of becoming Healthy when Sick
@@ -310,7 +338,8 @@ The output is the structure of the model including the formulae.
 
 To evaluate the model, we run `gmod_evaluate()` which returns the numerical outcomes. 
 ```{r}
-model_struc <- gmod_gen_model_function(mygmod)
+n_cycles <- 10
+model_struc <- gmod_gen_model_function(mygmod, n_cycles)
 #model_res
 ```
 
