--- a/vignettes/gmod_intro_markov_tutorial.Rmd
+++ b/vignettes/gmod_intro_markov_tutorial.Rmd
@@ -31,24 +31,23 @@ library(gmod)
 
 The Markov model involves a cost-effectiveness example with 4 decisions and 4 states. For more details on the model, please refer to the reference above. First we define the gmod object and the layers. 
 ```{r}
-mygmod <- gmod(model_type = "Markov", n_cycles = 75) + 
+mygmod <- gmod() + 
   decisions("StandardOfCare", "StrategyA", "StrategyB", "StrategyAB") + 
-  states("H", "S1", "S2", "D") + 
-  discounts(payoffs = c("cost", "utility"), discounts = c(0.03, 0.03)) + 
-  initial_probs(states = "H", probs = 1) +  
-  event_mapping(event = "get_event",  
-                values = c("recover", "getsick", "progress", "die", "stay"), 
+  states(names = c("H", "S1", "S2", "D"), init_probs = c(1,0,0,0)) +  
+  event(name = "get_event",  
+                results = c("recover", "getsick", "progress", "die", "stay"), 
                 probs = c(pRecover(state), pGetSick(state), pProgress(state, decision), pDie(state), Inf), 
-                outcomes = c("H", "S1", "S2", "D", curr_state())) +  
+                outcomes = c("H", "S1", "S2", "D", "curr_state")) +  
   payoffs(cost = cost(state, decision), 
-          utility = utility(state, decision))
+          utility = utility(state, decision),
+          discount_rates = c(0.03, 0.03))
 ```
 
 The `gmod()` function defines the model type as a Markov model and number of cycles as 75. The `decision()` function defines the treatment strategies.  The `initial_probs()` defines the initial probabilities. Here we only define the "Moderate" states as the starting state with probability equals 1. The other states will be set to 0. 
 
 Since the tutorial assumes that all the events happen simultaneously (i.e., no sequence), we add a single `event_mapping()` layer we model the individual final_outcomes separately.  We can interpret the event_mapping as the following: The event `get_event` can have 5 values: recover, getsick, progress, die, or stay in the same state.  These values will outcome in the following states: H, S1, S2, D and staying in the current state, respectively. The prob argument defines the probability of these final_outcomes.  For example, pRecover() defins the probability of recovering and it is a function of state because this probability is only applied if the state is "S1", and is 0 otherwise. Note here we use `Inf` here is as a placeholder to reduce the amount of typing required. Then, we define the payoffs of cost and utility and define each as a function of the state and the decision taken.
 
-The `curr_state()` is a build-in function that instructs gmod to compute the probability of a state returning to itself.
+The `"curr_state"` is a build-in function that instructs gmod to compute the probability of a state returning to itself.
 
 Before we can evaluate the model, first we need to pass the parameter values. Here we use the global environment to define those. Later, we show how to pass these as a parameter list `param` which will be helpful for analyses such as probabilitistic sensitivity analyses. 
 ```{r}
@@ -174,7 +173,7 @@ The output is the structure of the model including the formulae.
 To evaluate the model, we run `gmod_evaluate()` which returns the numerical outcomes. 
 The model structure can also be returned directly from the 
 ```{r}
-model_struc <- gmod_gen_model_function(mygmod)
+model_struc <- gmod_gen_model_function(mygmod, n_cycles=75)
 #model_res
 ```
 
